osprey_worker/src/osprey/engine/ast_validator/validators/tests/test_validate_dynamic_calls_have_annotated_rvalue/test_invalid_annotation[str [or] str].txt
error: `Optional` can't have arguments of different types or duplicate types
--> main.sml:1:5
     |
   1 | Foo: str | str = JsonData(path='$.foo')
     |      ^ got str and str arguments